<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInventory_Activity"
    android:orientation="vertical"
    android:padding="@dimen/average_margin"
    android:background="@android:color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productname_text"
        android:padding="@dimen/low_margina"
        android:id="@+id/tv_product_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_text"
        android:padding="@dimen/low_margina"
        android:id="@+id/tv_price"
        android:layout_marginTop="@dimen/average_margin"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average_margin"
        android:padding="@dimen/low_margina"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_string"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content" android:layout_marginLeft="@dimen/average_margin"
            android:text="@string/subsymbol"
            android:padding="@dimen/low_margina"
            android:id="@+id/sub_quantity_tv"
            android:background="@drawable/layout_border"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeronumber"
            android:padding="@dimen/average_margin"
            android:id="@+id/tv_quantity"
            android:gravity="center"/>

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:text="@string/addsymbol"
            android:padding="@dimen/low_margina"
            android:id="@+id/add_quantity_tv"
            android:background="@drawable/layout_border"
            android:gravity="center"/>


    </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name_text"
        android:padding="@dimen/low_margina"
        android:id="@+id/tv_supplier_name"
        android:layout_marginTop="@dimen/average_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_phn_no_text"
        android:padding="@dimen/low_margina"
        android:inputType="phone"
        android:id="@+id/tv_supplier_phn_no"
        android:layout_marginTop="@dimen/average_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_inventory_btn"
        android:text="@string/done_string"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="@dimen/average_margin"/>

</LinearLayout>