<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_marginTop="@dimen/low_margina"
    android:layout_marginBottom="@dimen/low_margina">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/largetextsize"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:hint="@string/productname_text"
        android:layout_margin="@dimen/average_margin"
        android:id="@+id/productnametv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/average_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:textStyle="bold"
                android:textSize="@dimen/averagetextsize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price_tv"
                android:layout_marginLeft="@dimen/average_margin"
                android:textSize="@dimen/averagetextsize"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_string"
                    android:textStyle="bold"
                    android:textSize="@dimen/averagetextsize"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quantity_tv"
                    android:layout_marginLeft="@dimen/average_margin"
                    android:textSize="@dimen/averagetextsize"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/average_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_text"
            android:textStyle="bold"
            android:textSize="@dimen/averagetextsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suppliername_tv"
            android:layout_marginLeft="@dimen/average_margin"
            android:textSize="@dimen/averagetextsize"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/average_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phn_no_text"
                android:textStyle="bold"
                android:textSize="@dimen/averagetextsize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/supplierphoneno_tv"
                android:layout_marginLeft="@dimen/average_margin"
                android:textSize="@dimen/averagetextsize"/>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimary"/>


</LinearLayout>